# audio-ml-from-scratch

./: .gitignore  README.md  pyproject.toml
docs/: week1.md
mini_projects/01_tiny_audio_classifier/: generate_toy_audio.py  train.py  train_toy_classifier.py
src/audio_ml/audio/: collate.py  dataset.py  features.py
src/audio_ml/foundations/: cross_entropy.py  softmax.py
src/audio_ml/models/: tiny_audio_cnn.py
src/audio_ml/optim/: sgd.py
tests/: test_collate.py  test_cross_entropy.py  test_sgd.py  test_softmax.py  test_tiny_audio_cnn.py
