[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-ml-from-scratch"
version = "0.1.0"
description = "Audio machine learning implementations from scratch"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
